--- a/app/static/room.html
+++ b/app/static/room.html
@@ -12,23 +12,43 @@
       margin:.8rem auto .3rem;
       max-width: calc(2 * var(--card-w) + var(--cards-gap));
       padding:0 1rem;
+      min-height: 40px; /* Höhe stabil halten */
     }
     .room-header .spacer{ flex:1 1 auto; }
-    #roomGameName{ margin:0; font-size:1.28rem; font-weight:800; letter-spacing:.2px; }
 
-    /* ScoreOut NICHT mehr links verschieben – zentriert lassen */
-    #scoreOut{ margin:0 auto 1rem; position:relative; }
+    #scoreOut{
+      margin:0 auto 1rem;
+      position:relative;
+    }
 
-    .rules-link{ display:inline-block; padding:.25rem .5rem; border:1px solid var(--border); border-radius:6px; text-decoration:none; color:#333; background:#f8f8f8; }
+    .rules-link{
+      display:inline-block;
+      padding:.25rem .5rem;
+      border:1px solid var(--border);
+      border-radius:6px;
+      text-decoration:none;
+      color:#333;
+      background:#f8f8f8;
+    }
     .rules-link:hover{ background:#eee; }
     .rules-link.small{ font-size:.85rem; }
+
+    /* Reactions links oben, mobile & desktop */
+    .reactions-host{
+      display:flex;
+      align-items:center;
+      gap:.25rem;
+      margin-left:0;
+      margin-right:.5rem;
+    }
+    .reactions-host > * { flex:0 0 auto; }
   </style>
 </head>
 <body>
 
   <!-- Header -->
   <div class="room-header">
-    <h1 id="roomGameName"></h1>
+    <div id="reactionsBar" class="reactions-host"></div>
     <div class="spacer"></div>
     <a href="rules.html" target="_blank" rel="noopener" class="small buttonlike">Spielregeln</a>
     <button id="backToLobbyBtn" class="small" onclick="location.href='/static/index.html'">Zurück zur Lobby</button>
@@ -37,19 +57,19 @@
   <!-- Inhalt aus scoreboard.js (Würfel, Buttons, Tabellen) -->
   <div id="scoreOut"></div>
 
-<!-- Chat -->
-<div id="chatPanel" class="chat-panel">
-  <h3 style="margin:.6rem 0;">Chat</h3>
-  <div class="chat-input-row">
-    <input id="chatInput" type="text" placeholder="Nachricht eingeben …">
-    <button id="chatSend">Senden</button>
+  <!-- Chat -->
+  <div id="chatPanel" class="chat-panel">
+    <h3 style="margin:.6rem 0;">Chat</h3>
+    <div class="chat-input-row">
+      <input id="chatInput" type="text" placeholder="Nachricht eingeben …">
+      <button id="chatSend">Senden</button>
+    </div>
+    <div id="chatBox" class="chat-box"></div>
   </div>
-  <div id="chatBox" class="chat-box"></div>
-</div>
 
-  <!-- Scripts: zuerst scoreboard, dann room (als ES‑Modul!) -->
+  <!-- Scripts: zuerst scoreboard, dann room (als ES-Modul!) -->
   <script src="scoreboard.js" defer></script>
-  <script src="/static/emoji.js"></script>
+  <script src="/static/emoji.js?v=2"></script>
   <script type="module" src="room.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
