[FIX]fixed spectator mode, fixed buttons, bumped cache version to v29

--- a/app/static/room.html
+++ b/app/static/room.html
@@ -50,8 +50,8 @@
   <div class="room-header">
     <div id="reactionsBar" class="reactions-host"></div>
     <div class="spacer"></div>
-    <a href="rules.html" target="_blank" rel="noopener" class="small buttonlike">Spielregeln</a>
-    <button id="backToLobbyBtn" class="small" onclick="location.href='/static/index.html'">Zurück zur Lobby</button>
+    <button class="small" onclick="window.open('/static/rules.html','_blank','noopener')">Spielregeln</button>
+<button id="backToLobbyBtn" class="small">Zurück zur Lobby</button>
   </div>
 
   <!-- Inhalt aus scoreboard.js (Würfel, Buttons, Tabellen) -->
