--- a/app/static/rules.html
+++ b/app/static/rules.html
@@ -25,8 +25,8 @@
   </style>
 </head>
 <body>
-  <a href="index.html" class="back">← Zurück zur Lobby</a>
   <div class="doc">
+    <button class="small" onclick="location.href='/static/index.html'" style="margin:.75rem 0 .5rem;">Zurück zur Lobby</button>
     <h1>Spielanleitung</h1>
     <p>
       <strong>Ziel:</strong> Sammle möglichst viele Punkte über vier Spalten –
