--- a/app/static/index.html
+++ b/app/static/index.html
@@ -31,15 +31,6 @@
     .leaderboard th, .leaderboard td { border:1px solid #ddd; padding:.4rem .6rem; text-align:left; font-size:.9rem; }
     .leaderboard th { background:#f7f7f7; font-weight:600; }
     .stats { font-size:.9rem; color:#444; }
-    .rules-link{
-      text-decoration:none;
-      border:1px solid var(--border,#e0e0e0);
-      background:#fff;
-      padding:.25rem .5rem;
-      border-radius:.4rem;
-      font-size:.95rem;
-    }
-    .rules-link:hover{ background:#f2f6ff; border-color:#8ab4ff; }
   </style>
 </head>
 <body>
@@ -49,7 +40,7 @@
         <div class="logo">🎲</div>
         <h1 style="margin:.2rem 0;">Würfler – Lobby</h1>
       </div>
-      <div class="stats">Würfelspiele beendet: <span id="gamesPlayed">0</span><a href="/static/rules.html" class="rules-link" style="margin-left:.75rem;">Spielregeln</a></div>
+      <div class="stats">Würfelspiele beendet: <span id="gamesPlayed">0</span><button class="small" style="margin-left:.75rem;" onclick="location.href='/static/rules.html'">Spielregeln</button></div>
     </div>
 
     <!-- 1) Wer bist du? -->
