--- a/app/static/room.html
+++ b/app/static/room.html
@@ -76,7 +76,7 @@
   </div>
 
   <!-- Scripts: zuerst scoreboard (Renderer), dann room (WS/Steuerung als ES-Modul) -->
-  <script src="scoreboard.js" defer></script>
+  <script src="/static/scoreboard.js?v=14" defer></script>
   <script src="/static/emoji.js?v=2"></script>
   <script type="module" src="room.js"></script>
   <script>
